--- a/example/standalone/static/css/bitshares-widget-voting.css
+++ b/example/standalone/static/css/bitshares-widget-voting.css
@@ -1,1 +1,144 @@
-.widget-voting--tiles{text-align:center;font-family:Avenir,Helvetica,Arial,sans-serif}.widget-voting--tiles--title{cursor:pointer}.widget-voting--tiles--title h2{display:inline-block;width:250px;background-color:#33a3f1;font-size:10px;font-color:#ffffff;border-radius:50px 50px 50px 50px;margin-bottom:0;padding:1px;color:#fff;border-bottom:1px solid #323d54}.widget-voting--tiles--popup-message{color:#000}.widget-voting--tiles--tile{display:inline-block}.widget-voting--tiles .widget-voting--popup--content{font-size:.9em}.worker{display:inline-block;border-radius:15px;box-shadow:0 2px 15px rgba(25,25,25,.27);padding:7px 5px 2px 0;margin-right:5px;margin-left:5px}.worker h3{padding-left:.5em;padding-right:.5em}.worker .funding,.worker .status,.worker .time,.worker .votes,.worker h3{font-size:.7em}.worker .voting{font-size:.7em;margin-top:.5em;margin-bottom:.5em;float:right}.worker .voting .done{padding-top:.7em}.worker .voting .button{border-radius:15px;box-shadow:0 2px 5px rgba(25,25,25,.27);margin-top:0}.worker .voting .label{font-size:.7em;color:gray;vertical-align:middle}.widget-voting--popup{display:inline;position:absolute;min-width:13em;border-bottom:6px solid #000;border:thin solid rgba(0,0,0,.23);background:#fff;color:#000;border-radius:16px;padding:5px 10px 4px;box-shadow:5px 10px 18px rgba(25,25,25,.27);font-size:.9em}a{color:#1e7ec8;text-decoration:none}a:hover{text-decoration:underline}.widget--copyright{font-size:.8em}.widget--copyright a{color:#1e7ec8;text-decoration:none}.widget--copyright a:hover{text-decoration:underline}.widget--copyright img{height:1.6em;width:1.6em}.widget-voting--inline{color:#2c3e50;font-family:Avenir,Helvetica,Arial,sans-serif}.widget-voting--inline .widget-voting--popup--content{font-size:.9em}.widget-voting--inline--text{display:inline;position:relative}.widget-voting--inline--text:hover{cursor:pointer}.widget-voting--popup--content .voting{float:right}.widget-voting--popup--content .voting .label{font-size:.7em;color:gray;vertical-align:middle}.widget-voting--popup--content .button{border-radius:15px;margin-top:.3em;margin-bottom:.3em}
+.widget-voting--tiles {
+    text-align: center;
+    font-family: Avenir, Helvetica, Arial, sans-serif
+}
+
+.widget-voting--tiles--title {
+    cursor: pointer
+}
+
+.widget-voting--tiles--title h2 {
+    display: inline-block;
+    width: 250px;
+    background-color: #33a3f1;
+    font-size: 10px;
+    font-color: #ffffff;
+    border-radius: 50px 50px 50px 50px;
+    margin-bottom: 0;
+    padding: 1px;
+    color: #fff;
+    border-bottom: 1px solid #323d54
+}
+
+.widget-voting--tiles--popup-message {
+    color: #000
+}
+
+.widget-voting--tiles--tile {
+    display: inline-block
+}
+
+.widget-voting--tiles .widget-voting--popup--content {
+    font-size: .9em
+}
+
+.worker {
+    display: inline-block;
+    border-radius: 15px;
+    box-shadow: 0 2px 15px rgba(25, 25, 25, .27);
+    padding: 7px 5px 2px 0;
+    margin-right: 5px;
+    margin-left: 5px
+}
+
+.worker h3 {
+    padding-left: .5em;
+    padding-right: .5em
+}
+
+.worker .funding, .worker .status, .worker .time, .worker .votes, .worker h3 {
+    font-size: .7em
+}
+
+.worker .voting {
+    font-size: .7em;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    float: right
+}
+
+.worker .voting .done {
+    padding-top: .7em
+}
+
+.worker .voting .button {
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgba(25, 25, 25, .27);
+    margin-top: 0
+}
+
+.worker .voting .label {
+    font-size: .7em;
+    color: gray;
+    vertical-align: middle
+}
+
+.widget-voting--popup {
+    display: inline;
+    position: absolute;
+    min-width: 13em;
+    border-bottom: 6px solid #000;
+    border: thin solid rgba(0, 0, 0, .23);
+    background: #fff;
+    color: #000;
+    border-radius: 16px;
+    padding: 5px 10px 4px;
+    box-shadow: 5px 10px 18px rgba(25, 25, 25, .27);
+    font-size: .9em
+}
+
+a {
+    color: #1e7ec8;
+    text-decoration: none
+}
+
+a:hover {
+    text-decoration: underline
+}
+
+.widget--copyright {
+    font-size: .8em
+}
+
+.widget--copyright img {
+    height: 1.6em;
+    width: 1.6em
+}
+
+.widget-voting--inline {
+    color: #2c3e50;
+    font-family: Avenir, Helvetica, Arial, sans-serif
+}
+
+.widget-voting--inline .widget-voting--popup--content {
+    font-size: .9em
+}
+
+.widget-voting--inline--text {
+    display: inline;
+    position: relative
+}
+
+.widget-voting--inline--text:hover {
+    cursor: pointer
+}
+
+.widget-voting--popup--content .voting {
+    float: right;
+    margin-top: .5em
+}
+
+.widget-voting--popup--content .copyright {
+    float: left;
+    margin-top: 2.5em
+}
+
+.widget-voting--popup--content .voting .label {
+    font-size: .7em;
+    color: gray;
+    vertical-align: middle
+}
+
+.widget-voting--popup--content .button {
+    border-radius: 15px
+}
